# telepath

./: .travis.yml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
telepath/: __init__.py  telepath.py
telepath/tests/: test_telepath.py
tests/: test_telepath.py
