[metadata]
name = telepath
summary = Automate interaction with standup.
description-file =
    README.rst
author = Clif Houck
author-email = me@clifhouck.com
classifier =
    Development Status :: 2 - Pre-Alpha,
    Intended Audience :: Developers,
    License :: OSI Approved :: BSD License,
    Natural Language :: English,
    Programming Language :: Python :: 2,
    Programming Language :: Python :: 2.6,
    Programming Language :: Python :: 2.7,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.3,
    Programming Language :: Python :: 3.4,
version = 0.1.0
url = https://github.com/ClifHouck/telepath
home_page = https://github.com/ClifHouck/telepath
license = BSD

[files]
packages = 
    telepath

[entry_points]
console_scripts =
    telepath = telepath.telepath:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
